# spark

./: .coverage.NC-bprzybysz-L0J0W62QRH.local.19997.XDXxaKox  .coverage.NC-bprzybysz-L0J0W62QRH.local.29229.XNluJuax  .coverage.NC-bprzybysz-L0J0W62QRH.local.36997.XSjkfTwx  .coverage.NC-bprzybysz-L0J0W62QRH.local.72689.XuJKupSx  .cursorcodestyle  .cursorignore  .cursorrules  .env.example  .gitignore  MlpipelineGuideline.md  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py
docs/: README.md  ReviewReport.md  analytics_pipeline.md
docs/api/: endpoints.md  schema_validation.md
docs/api/schema_detection/: pdf_processor.md
docs/architecture/: overview.md
docs/data/: etl.md  streaming_pipeline.md
docs/dev/: code_style_guide.md  setup_guide.md  testing_guide.md
docs/infrastructure/: setup_guide.md
docs/ml/: README.md  models.md  monitoring.md
docs/workflow/: development.md
outputs/pdf_processor/: AWS Certified Solutions Architect - Associate_extract.json
spark-events/: local-1743972899882.inprogress
src/: __init__.py
src/api/fastapi/: main.py  model_analytics.py
src/api/fastapi/tests/: test_model_analytics_api.py
src/core/config/: m1_optimized_settings.py  settings.py
src/core/di/: container.py
src/core/logging/: logger.py
src/data/spark/: session.py
src/ml/models/: registry.py  tensorflow_model.py
src/ml/monitoring/: alerts.py  model_monitor.py  visualization.py
src/stages/: __init__.py
src/stages/stage1_schema_detection/: README.md  __init__.py  detector.py
src/stages/stage1_schema_detection/processors/: __init__.py  base_processor.py  parquet_processor.py  pdf_processor.py
src/stages/stage1_schema_detection/utils/: __init__.py  text_extraction.py
src/stages/stage2_data_transformation/: __init__.py  transformer.py
src/stages/stage3_data_quality/: config.py  dashboard.py  data_quality.py  lineage.py  utils.py
src/stages/stage4_analytics/: analytics.py  batch_processor.py  batch_scheduler.py  config.py  utils.py
src/stages/stage4_analytics/tests/: test_batch_processor.py  test_batch_scheduler.py  test_model_api.py
src/stages/stage5_model/: README.md  __init__.py  config.py
src/stages/stage5_model/evaluation/: __init__.py  (+1 more)
src/utility/: __init__.py  base.py  config.py  logging.py  monitoring.py  spark_utils.py
tests/: __init__.py  base_test_config.py  conftest.py  stage_test_template.py
tests/core/config/: test_m1_optimized_settings.py  test_m1_settings.py
tests/data/: test.json
tests/ml/monitoring/: test_alerts.py  test_model_monitor.py  test_visualization.py
tests/monitoring/: __init__.py  test_monitoring.py  test_spark_ui.py
tests/performance/: test_m1_performance.py
tests/stage1-schema-detection/: conftest.py  test_detector.py  test_hive_integration.py
tests/stage1-schema-detection/processors/: conftest.py  test_parquet_processor.py  test_pdf_processor.py
tests/stage2-data-transformation/: conftest.py  test_transformer.py
tests/stage3-data-quality/: conftest.py  run_tests.sh  test_stage3_data_quality.py  test_stage3_utils.py
tests/stage4-analytics/: test_stage4_analytics.py  test_stage4_utils.py
tests/stage5_model/: test_config.py  test_hive_setup.py  test_model_evaluator.py  test_model_trainer.py  test_model_utils.py  test_pdf_to_hive.py
tests/utility/: test_config.py  test_logging.py
workflow/: README.md  codebasemap.json  progress.yaml
(+3 files in other folders)
